getting dir scan going

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,9 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noUnusedParameters": true,
+    "noImplicitAny": false,
     "noFallthroughCasesInSwitch": true,
 
     "baseUrl": ".",
