--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build && electron-builder",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
+    "adm-zip": "^0.5.10",
+    "jest": "^29.7.0",
     "pinia": "^2.1.7",
     "primeicons": "^6.0.1",
     "primevue": "^3.49.0",
