get running on widows

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,8 @@
     "noImplicitAny": false,
     "noFallthroughCasesInSwitch": true,
 
+    "allowJs": true,
+
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
