--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "primeicons": "^6.0.1",
     "primevue": "^3.49.0",
     "vue": "^3.3.4",
-    "vue-router": "4"
+    "vue-router": "4",
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
