--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "adm-zip": "^0.5.10",
+    "express": "^4.18.2",
     "jest": "^29.7.0",
     "pinia": "^2.1.7",
     "primeicons": "^6.0.1",
