--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "adm-zip": "^0.5.10",
+    "axios": "^1.6.7",
     "express": "^4.18.2",
+    "form-data": "^4.0.0",
     "jest": "^29.7.0",
     "pinia": "^2.1.7",
     "primeicons": "^6.0.1",
     "primevue": "^3.49.0",
+    "uuid": "^9.0.1",
     "vue": "^3.3.4",
     "vue-router": "4",
     "yarn": "^1.22.21"
