--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "form-data": "^4.0.0",
     "jest": "^29.7.0",
+    "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "primeicons": "^6.0.1",
     "primevue": "^3.49.0",
