--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "form-data": "^4.0.0",
     "jest": "^29.7.0",
     "lodash": "^4.17.21",
+    "p-queue": "^8.0.1",
     "pinia": "^2.1.7",
     "primeicons": "^6.0.1",
     "primevue": "^3.49.0",
