--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "adm-zip": "^0.5.10",
     "axios": "^1.6.7",
+    "electron-log": "^5.1.2",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
     "jest": "^29.7.0",
