--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "primevue": "^3.49.0",
     "uuid": "^9.0.1",
     "vue": "^3.3.4",
-    "vue-router": "4",
-    "yarn": "^1.22.22"
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
@@ -41,5 +40,5 @@
     "vue-tsc": "^2.2.8"
   },
   "main": "dist-electron/main.js",
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "yarn@4.7.0"
 }
