--- a/package.json
+++ b/package.json
@@ -11,25 +11,25 @@
     "test": "jest"
   },
   "dependencies": {
-    "adm-zip": "^0.5.10",
-    "axios": "^1.6.7",
-    "electron-log": "^5.1.2",
-    "express": "^4.18.2",
-    "form-data": "^4.0.0",
+    "adm-zip": "^0.5.16",
+    "axios": "^1.8.3",
+    "electron-log": "^5.3.2",
+    "express": "^4.21.2",
+    "form-data": "^4.0.2",
     "jest": "^29.7.0",
     "lodash": "^4.17.21",
-    "p-queue": "^8.0.1",
-    "pinia": "^2.1.7",
+    "pinia": "^3.0.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.49.0",
-    "uuid": "^9.0.1",
-    "vue": "^3.3.4",
-    "vue-router": "4"
+    "uuid": "^11.1.0",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.17",
+    "@vitejs/plugin-vue": "^5.2.3",
+    "autoprefixer": "^10.4.21",
     "electron": "^35.0.2",
-    "electron-builder": "^24.6.4",
+    "electron-builder": "^25.1.8",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.8.2",
@@ -39,5 +39,9 @@
     "vue-tsc": "^2.2.8"
   },
   "main": "dist-electron/main.js",
-  "packageManager": "yarn@4.7.0"
+  "packageManager": "yarn@4.7.0",
+  "engines": {
+    "node": ">=18.0.0",
+    "yarn": ">=4.0.0"
+  }
 }
