--- a/package.json
+++ b/package.json
@@ -21,21 +21,23 @@
     "primeicons": "^6.0.1",
     "primevue": "^3.49.0",
     "uuid": "^11.1.0",
-    "vue-router": "^4.5.0",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
     "autoprefixer": "^10.4.21",
-    "electron-builder": "^25.1.8",
+    "dmg-builder": "^25.1.8",
     "electron": "^35.0.2",
+    "electron-builder": "^25.1.8",
+    "electron-builder-squirrel-windows": "^25.1.8",
     "jest": "^29.7.0",
-    "postcss": "^8.4.35",
+    "postcss": "^8.5.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.8.2",
-    "vite-plugin-electron-renderer": "^0.14.6",
-    "vite-plugin-electron": "^0.29.0",
     "vite": "^6.2.2",
+    "vite-plugin-electron": "^0.29.0",
+    "vite-plugin-electron-renderer": "^0.14.6",
     "vue-tsc": "^2.2.8"
   },
   "main": "dist-electron/main.js",
